{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 31,
  "lineage": "7d3658d1-ce99-4768-3215-73cfe27503a0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473761847920:internet-gateway/igw-010b8c0fdc5030476",
            "id": "igw-010b8c0fdc5030476",
            "owner_id": "473761847920",
            "tags": {
              "Name": "igwpract"
            },
            "tags_all": {
              "Name": "igwpract"
            },
            "vpc_id": "vpc-024b9f858ac0a8d3e"
          },
          "dependencies": [
            "aws_vpc.vpcpra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-te",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473761847920:internet-gateway/igw-0d94acb07a0f0dcfe",
            "id": "igw-0d94acb07a0f0dcfe",
            "owner_id": "473761847920",
            "tags": {
              "Name": "igw-te"
            },
            "tags_all": {
              "Name": "igw-te"
            },
            "vpc_id": "vpc-08c0be6b393be56a4"
          },
          "dependencies": [
            "aws_vpc.vpc-o1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473761847920:route-table/rtb-0740c3f8b297ed761",
            "id": "rtb-0740c3f8b297ed761",
            "owner_id": "473761847920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.0.0.0/32",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d94acb07a0f0dcfe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "56.90.90.90/32",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d94acb07a0f0dcfe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "App": "Web",
              "Env": "Dev",
              "Name": "practrt"
            },
            "tags_all": {
              "App": "Web",
              "Env": "Dev",
              "Name": "practrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c0be6b393be56a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-te",
            "aws_vpc.vpc-o1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgpract",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473761847920:security-group/sg-02a9092bed76c1a1d",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a9092bed76c1a1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30
              },
              {
                "cidr_blocks": [
                  "23.90.90.45/32",
                  "45.90.78.90/32"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sgpract",
            "name_prefix": "",
            "owner_id": "473761847920",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sgpract"
            },
            "tags_all": {
              "Name": "sgpract"
            },
            "timeouts": null,
            "vpc_id": "vpc-024b9f858ac0a8d3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpcpra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-o1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473761847920:vpc/vpc-08c0be6b393be56a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0accfaa2cd3933170",
            "default_route_table_id": "rtb-09beabb37aef1b158",
            "default_security_group_id": "sg-04a7183f31c25fc41",
            "dhcp_options_id": "dopt-0be15c45f210a5590",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08c0be6b393be56a4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09beabb37aef1b158",
            "owner_id": "473761847920",
            "tags": {
              "Name": "vpc-te",
              "env": "dev"
            },
            "tags_all": {
              "Name": "vpc-te",
              "env": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcpra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473761847920:vpc/vpc-024b9f858ac0a8d3e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-02ce8ea2c0d034c70",
            "default_route_table_id": "rtb-098751497cd7042f9",
            "default_security_group_id": "sg-0a1f802a4ecbf4b65",
            "dhcp_options_id": "dopt-0be15c45f210a5590",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-024b9f858ac0a8d3e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-098751497cd7042f9",
            "owner_id": "473761847920",
            "tags": {
              "Name": "vpcpra",
              "app": "webapp"
            },
            "tags_all": {
              "Name": "vpcpra",
              "app": "webapp"
            }
          }
        }
      ]
    }
  ]
}